--- a/source/one.Identity/Views/Home/About.cshtml
+++ b/source/one.Identity/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is the common authentication site for all Spydersoft products.</p>
