--- a/source/one.Identity/Views/_ViewImports.cshtml
+++ b/source/one.Identity/Views/_ViewImports.cshtml
@@ -3,4 +3,7 @@
 @using one.Identity.Models.AccountViewModels
 @using one.Identity.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
+@using GravatarHelper.Common
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, GravatarHelper.AspNetCore
+
