--- a/source/one.Identity/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/source/one.Identity/Views/Account/ExternalLoginConfirmation.cshtml
@@ -17,7 +17,7 @@
         logging in.
     </p>
     <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
+        <label asp-for="Email" class="col-md-2 form-control-label"></label>
         <div class="col-md-10">
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </div>
     </div>
 </form>
