--- a/source/one.Identity/Views/Manage/AddPhoneNumber.cshtml
+++ b/source/one.Identity/Views/Manage/AddPhoneNumber.cshtml
@@ -9,7 +9,7 @@
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="PhoneNumber" class="col-md-2 control-label"></label>
+        <label asp-for="PhoneNumber" class="col-md-2 form-control-label"></label>
         <div class="col-md-10">
             <input asp-for="PhoneNumber" class="form-control" />
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Send verification code</button>
+            <button type="submit" class="btn btn-primary">Send verification code</button>
         </div>
     </div>
 </form>
