--- a/source/one.Identity/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/source/one.Identity/Views/Manage/VerifyPhoneNumber.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Code" class="col-md-2 control-label"></label>
+        <label asp-for="Code" class="col-md-2 form-control-label"></label>
         <div class="col-md-10">
             <input asp-for="Code" class="form-control" />
             <span asp-validation-for="Code" class="text-danger"></span>
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </div>
 </form>
