--- a/source/one.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/one.Identity/Views/Shared/_LoginPartial.cshtml
@@ -26,7 +26,7 @@
 }
 else
 {
-    <ul class="nav">
+    <ul class="nav navbar-nav ml-auto">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >
                 <img gravatar-email="@UserManager.GetUserName(User)" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
