--- a/source/one.Identity/Views/Home/Index.cshtml
+++ b/source/one.Identity/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authentication
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -14,20 +15,4 @@
             <dd>@claim.Value</dd>
         }
     </dl>
-
-    var authScheme = "Identity.Application";
-    if (!String.IsNullOrWhiteSpace(authScheme))
-    {
-        <h2>Cookies Properties</h2>
-        <dl>
-            @{
-                var props = (await Context.Authentication.GetAuthenticateInfoAsync(authScheme)).Properties;
-            }
-            @foreach (var item in props.Items)
-            {
-                <dt>@item.Key</dt>
-                <dd>@item.Value</dd>
-            }
-        </dl>
-    }
 }
