--- a/source/one.Identity/Views/Home/About.cshtml
+++ b/source/one.Identity/Views/Home/About.cshtml
@@ -1,7 +1,19 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authentication;
+@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>This is the common authentication site for all Spydersoft products.</p>
+<h3>User claims</h3>
+
+<dl>
+    @foreach (var claim in User.Claims)
+    {
+        <dt>@claim.Type</dt>
+        <dd>@claim.Value</dd>
+
+    }
+    <dt>id token</dt>
+    <dd>@await ViewContext.HttpContext.GetTokenAsync("id_token")</dd>
+</dl>
