Added Edit page

--- a/source/one.Identity/Views/Client/Index.cshtml
+++ b/source/one.Identity/Views/Client/Index.cshtml
@@ -28,7 +28,7 @@
                 <td></td>
                 <td>@client.ClientId</td>
                 <td>@client.ClientName</td>
-                <td><p data-placement="top" data-toggle="tooltip" title="Edit"><span class="fa fa-edit"></span></p></td>
+                <td><a href="~/client/edit/@client.Id"><span class="fa fa-edit"></span></a></td>
                 <td><p data-placement="top" data-toggle="tooltip" title="Delete"><span class="fa fa-trash"></span></p></td>
             </tr>
     }
