Fixed build errors

--- a/source/one.Identity/Views/Account/Logout.cshtml
+++ b/source/one.Identity/Views/Account/Logout.cshtml
@@ -1,4 +1,5 @@
-﻿@model LogoutViewModel
+﻿@using one.Identity.Quickstart
+@model one.Identity.Quickstart.LogoutViewModel
 
 <div class="logout-page">
     <div class="page-header">
