--- a/source/one.Identity/Views/Shared/Error.cshtml
+++ b/source/one.Identity/Views/Shared/Error.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Hosting
-@model ErrorViewModel
+@using one.Identity.Quickstart
+@model one.Identity.Quickstart.ErrorViewModel
 @inject IHostingEnvironment host
 
 @{
