--- a/source/one.Identity/Views/Account/LoggedOut.cshtml
+++ b/source/one.Identity/Views/Account/LoggedOut.cshtml
@@ -1,4 +1,5 @@
-﻿@model LoggedOutViewModel
+﻿@using one.Identity.Quickstart
+@model one.Identity.Quickstart.LoggedOutViewModel
 
 @{ 
     // set this so the layout rendering sees an anonymous user
