--- a/source/one.Identity/Styles/css/style.css
+++ b/source/one.Identity/Styles/css/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /**
  * CoreUI - Open Source Bootstrap Admin Template
  * @version v1.0.0-alpha.6
@@ -1205,9 +1205,11 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   margin-bottom: 0; }
 
 .form-check-input {
-  position: absolute;
-  margin-top: 0.25rem;
-  margin-left: -1.25rem; }
+    /* position: absolute;
+    margin-top: 0.25rem;
+   margin-left: -1.25rem;
+      */
+}
   .form-check-input:only-child {
     position: static; }
 
