--- a/source/one.Identity/Views/Client/Edit.cshtml
+++ b/source/one.Identity/Views/Client/Edit.cshtml
@@ -9,15 +9,222 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-
 <form asp-action="Edit">
     <div class="form-group">
-        <label asp-for="ClientId"></label>
-        <input type="text" class="form-control" id="clientId" asp-for="ClientId"/>
+        <input type="submit" value="Save" class="btn btn-primary" />
+    </div>
+    <div id="accordion">
+        <div class="card">
+            <div class="card-header" id="clientDetails">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseDetails" aria-expanded="true" aria-controls="collapseDetails">
+                        Client Details
+                    </button>
+                </h5>
+            </div>
+            <div id="collapseDetails" class="collapse show pl-2 pr-2" aria-labelledby="clientDetails" data-parent="#accordion">
+                <div class="form-group">
+                    <label asp-for="ClientId"></label>
+                    <input type="text" class="form-control" id="txtClientId" asp-for="ClientId" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="ClientName"></label>
+                    <input type="text" class="form-control" id="txtClientName" asp-for="ClientName" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="ClientUri"></label>
+                    <input type="text" class="form-control" id="txtClientUri" asp-for="ClientUri" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description"></label>
+                    <input type="text" class="form-control" id="txtDescription" asp-for="Description" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="chkEnabled" asp-for="Enabled" />
+                        <label class="form-check-label" asp-for="Enabled"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProtocolType"></label>
+                    <input type="text" class="form-control" id="txtProtocolType" asp-for="ProtocolType" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="AbsoluteRefreshTokenLifetime"></label>
+                    <input type="text" class="form-control" id="txtAbsoluteRefreshTokenLifetime" asp-for="AbsoluteRefreshTokenLifetime" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="AccessTokenLifetime"></label>
+                    <input type="text" class="form-control" id="txtAccessTokenLifetime" asp-for="AccessTokenLifetime" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="chkEnabled" asp-for="AllowAccessTokensViaBrowser" />
+                        <label class="form-check-label" asp-for="AllowAccessTokensViaBrowser"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="chkEnabled" asp-for="AllowOfflineAccess" />
+                        <label class="form-check-label" asp-for="AllowOfflineAccess"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="chkAllowPlainTextPkce" asp-for="AllowPlainTextPkce" />
+                        <label class="form-check-label" asp-for="AllowPlainTextPkce"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="chkAllowRememberConsent" asp-for="AllowRememberConsent" />
+                        <label class="form-check-label" asp-for="AllowRememberConsent"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="chkAlwaysSendClientClaims" asp-for="AlwaysSendClientClaims" />
+                        <label class="form-check-label" asp-for="AlwaysSendClientClaims"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="AuthorizationCodeLifetime"></label>
+                    <input type="text" class="form-control" id="txtAuthorizationCodeLifetime" asp-for="AuthorizationCodeLifetime" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="EnableLocalLogin" id="chkEnableLocalLogin" />
+                        <label class="form-check-label" asp-for="EnableLocalLogin"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IdentityTokenLifetime"></label>
+                    <input type="text" class="form-control" id="txtIdentityTokenLifetime" asp-for="IdentityTokenLifetime" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="IncludeJwtId" id="chkIncludeJwtId" />
+                        <label class="form-check-label" asp-for="IncludeJwtId"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LogoUri"></label>
+                    <input type="text" class="form-control" id="txtLogoUri" asp-for="LogoUri" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="RefreshTokenExpiration"></label>
+                    <input type="text" class="form-control" id="txtRefreshTokenExpiration" asp-for="RefreshTokenExpiration" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="RefreshTokenUsage"></label>
+                    <input type="text" class="form-control" id="txtRefreshTokenUsage" asp-for="RefreshTokenUsage" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="RequireClientSecret" id="chkRequireClientSecret" />
+                        <label class="form-check-label" asp-for="RequireClientSecret"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="RequireConsent" id="chkRequireConsent" />
+                        <label class="form-check-label" asp-for="RequireConsent"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="RequirePkce" id="chkRequirePkce" />
+                        <label class="form-check-label" asp-for="RequirePkce"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SlidingRefreshTokenLifetime"></label>
+                    <input type="text" class="form-control" id="txtSlidingRefreshTokenLifetime" asp-for="SlidingRefreshTokenLifetime" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="UpdateAccessTokenClaimsOnRefresh" id="chkUpdateAccessTokenClaimsOnRefresh" />
+                        <label class="form-check-label" asp-for="UpdateAccessTokenClaimsOnRefresh"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="AlwaysIncludeUserClaimsInIdToken" id="chkAlwaysIncludeUserClaimsInIdToken" />
+                        <label class="form-check-label" asp-for="AlwaysIncludeUserClaimsInIdToken"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="BackChannelLogoutSessionRequired" id="chkBackChannelLogoutSessionRequired" />
+                        <label class="form-check-label" asp-for="BackChannelLogoutSessionRequired"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="BackChannelLogoutUri"></label>
+                    <input type="text" class="form-control" id="txtBackChannelLogoutUri" asp-for="BackChannelLogoutUri" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="ClientClaimsPrefix"></label>
+                    <input type="text" class="form-control" id="txtClientClaimsPrefix" asp-for="ClientClaimsPrefix" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConsentLifetime"></label>
+                    <input type="text" class="form-control" id="txtConsentLifetime" asp-for="ConsentLifetime" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="FrontChannelLogoutSessionRequired" id="chkFrontChannelLogoutSessionRequired" />
+                        <label class="form-check-label" asp-for="FrontChannelLogoutSessionRequired"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FrontChannelLogoutUri"></label>
+                    <input type="text" class="form-control" id="txtFrontChannelLogoutUri" asp-for="FrontChannelLogoutUri" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="PairWiseSubjectSalt"></label>
+                    <input type="text" class="form-control" id="txtPairWiseSubjectSalt" asp-for="PairWiseSubjectSalt" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="DeviceCodeLifetime"></label>
+                    <input type="text" class="form-control" id="txtDeviceCodeLifetime" asp-for="DeviceCodeLifetime" />
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="NonEditable" id="chkNonEditable" />
+                        <label class="form-check-label" asp-for="NonEditable"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="UserCodeType"></label>
+                    <input type="text" class="form-control" id="txtUserCodeType" asp-for="UserCodeType" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="UserSsoLifetime"></label>
+                    <input type="text" class="form-control" id="txtUserSsoLifetime" asp-for="UserSsoLifetime" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header" id="headingScopes">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseScopes" aria-expanded="true" aria-controls="collapseScopes">
+                    Scopes
+                </button>
+            </h5>
+        </div>
+        <div id="collapseScopes" class="collapse" aria-labeledby="headingScopes" data-parent="#accordion">
+            <ul>
+                @foreach (var clientScopeViewModel in Model.AllowedScopes)
+                {
+                    <li>@clientScopeViewModel.Scope</li>
+                }
+            </ul>
+        </div>
     </div>
     <div class="form-group">
-        <label asp-for="ClientName"></label>
-        <input type="text" class="form-control" id="clientId" asp-for="ClientName"/>
+        <input type="submit" value="Save" class="btn btn-primary" />
     </div>
 </form>
 
