--- a/source/one.Identity/Views/Shared/_Layout.cshtml
+++ b/source/one.Identity/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
             <ul class="nav">
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Client" asp-action="Index">Clients</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
             </ul>
         </nav>
