Added support for Scope and Redirect editing

--- a/source/one.Identity/Views/Account/LoggedOut.cshtml
+++ b/source/one.Identity/Views/Account/LoggedOut.cshtml
@@ -1,5 +1,4 @@
-﻿@using one.Identity.Quickstart
-@model one.Identity.Quickstart.LoggedOutViewModel
+﻿@model one.Identity.Quickstart.LoggedOutViewModel
 
 @{ 
     // set this so the layout rendering sees an anonymous user
