--- a/source/one.Identity/Views/Manage/_ManageNav.cshtml
+++ b/source/one.Identity/Views/Manage/_ManageNav.cshtml
@@ -1,7 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using one.Identity.Models
-@using one.Identity.Views.Manage
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
