--- a/source/one.Identity/Views/Account/Logout.cshtml
+++ b/source/one.Identity/Views/Account/Logout.cshtml
@@ -1,5 +1,4 @@
-﻿@using one.Identity.Quickstart
-@model one.Identity.Quickstart.LogoutViewModel
+﻿@model one.Identity.Quickstart.LogoutViewModel
 
 <div class="logout-page">
     <div class="page-header">
