--- a/source/one.Identity/Views/Client/Index.cshtml
+++ b/source/one.Identity/Views/Client/Index.cshtml
@@ -1,11 +1,7 @@
-﻿@using System.Collections.Generic
-@using System.Linq
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@using one.Identity.Admin.Client
+﻿@using one.Identity.Models.ClientViewModels
 @model ClientsViewModel
 @{
-        ViewData["Title"] = "Registered Clients";
+    ViewData["Title"] = "Registered Clients";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -14,23 +10,23 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th></th>
                 <th>Client Id</th>
                 <th>Client Name</th>
-                <th>Edit</th>
-                <th>Delete</th>
+                <th>Actions&nbsp;<a asp-controller="Client" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
             </tr>
         </thead>
 
         @foreach (var client in Model.Clients)
-    {
+        {
             <tr>
-                <td></td>
                 <td>@client.ClientId</td>
                 <td>@client.ClientName</td>
-                <td><a href="~/client/edit/@client.Id"><span class="fa fa-edit"></span></a></td>
-                <td><p data-placement="top" data-toggle="tooltip" title="Delete"><span class="fa fa-trash"></span></p></td>
+                <td>
+                    <a asp-controller="Client" asp-action="Edit" asp-route-id="@client.Id"><span class="fa fa-edit"></span></a>
+                    <a asp-controller="Client" asp-action="Delete" asp-route-id="@client.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                </td>
             </tr>
-    }
+        }
     </table>
+    
 </div>
