--- a/source/one.Identity/Views/_ViewImports.cshtml
+++ b/source/one.Identity/Views/_ViewImports.cshtml
@@ -6,4 +6,4 @@
 @using GravatarHelper.Common
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, GravatarHelper.AspNetCore
-
+@addTagHelper *, one.Identity
