--- a/source/one.Identity/Views/ClientScopes/Edit.cshtml
+++ b/source/one.Identity/Views/ClientScopes/Edit.cshtml
@@ -35,7 +35,7 @@
                 </td>
                 <td>
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <input type="submit" value="Add" class="btn btn-primary" />
                     </div>
                 </td>
 
