--- a/source/one.Identity/Views/ClientGrantTypes/Edit.cshtml
+++ b/source/one.Identity/Views/ClientGrantTypes/Edit.cshtml
@@ -22,7 +22,7 @@
             {
                 <tr>
                     <td>@clientClaim.GrantType</td>
-                    <td><a asp-controller="ClientGrantTypes" asp-action="Delete" asp-route-id="@clientClaim.Id" asp-route-clientid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                    <td><a asp-action="Delete" asp-route-id="@clientClaim.Id" asp-route-clientid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
                 </tr>
             }
             <tr>
