--- a/source/one.Identity/Views/ClientScopes/Edit.cshtml
+++ b/source/one.Identity/Views/ClientScopes/Edit.cshtml
@@ -23,7 +23,7 @@
             {
                 <tr>
                     <td>@scope.Scope</td>
-                    <td><a asp-controller="ClientScopes" asp-action="Delete" asp-route-id="@scope.Id" asp-route-clientid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                    <td><a asp-action="Delete" asp-route-id="@scope.Id" asp-route-clientid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
                 </tr>
             }
             <tr>
