Added support for client Properties

--- a/source/one.Identity/Views/Shared/_clientNavBar.cshtml
+++ b/source/one.Identity/Views/Shared/_clientNavBar.cshtml
@@ -12,5 +12,6 @@
         <a class="nav-link @Model.GrantTypesActive" asp-area="" asp-controller="ClientGrantTypes" asp-action="Edit" asp-route-id="@Model.Id">Grant Types</a>
         <a class="nav-link @Model.IdpRestrictionsActive" asp-area="" asp-controller="ClientIdpRestrictions" asp-action="Edit" asp-route-id="@Model.Id">IDP Restrictions</a>
         <a class="nav-link @Model.PostLogoutActive" asp-area="" asp-controller="ClientPostLogoutRedirectUris" asp-action="Edit" asp-route-id="@Model.Id">Post Logout URIs</a>
+        <a class="nav-link @Model.PropertiesActive" asp-area="" asp-controller="ClientProperties" asp-action="Edit" asp-route-id="@Model.Id">Properties</a>
     }
 </nav>
