--- a/source/one.Identity/Views/Shared/_clientNavBar.cshtml
+++ b/source/one.Identity/Views/Shared/_clientNavBar.cshtml
@@ -13,5 +13,6 @@
         <a class="nav-link @Model.IdpRestrictionsActive" asp-area="" asp-controller="ClientIdpRestrictions" asp-action="Edit" asp-route-id="@Model.Id">IDP Restrictions</a>
         <a class="nav-link @Model.PostLogoutActive" asp-area="" asp-controller="ClientPostLogoutRedirectUris" asp-action="Edit" asp-route-id="@Model.Id">Post Logout URIs</a>
         <a class="nav-link @Model.PropertiesActive" asp-area="" asp-controller="ClientProperties" asp-action="Edit" asp-route-id="@Model.Id">Properties</a>
+        <a class="nav-link @Model.ClientSecretActive" asp-area="" asp-controller="ClientSecrets" asp-action="Edit" asp-route-id="@Model.Id">Secrets</a>
     }
 </nav>
