Added support for Identity Resource collections

--- a/source/one.Identity/Views/IdentityResources/Edit.cshtml
+++ b/source/one.Identity/Views/IdentityResources/Edit.cshtml
@@ -13,6 +13,8 @@
 
 <h2>@ViewData["Title"]</h2>
 
+@await Html.PartialAsync("_identityResourceNavBar", Model.NavBar)
+
 <form asp-action="Edit">
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
