--- a/source/one.Identity/Views/IdentityResourceClaims/Edit.cshtml
+++ b/source/one.Identity/Views/IdentityResourceClaims/Edit.cshtml
@@ -22,7 +22,7 @@
             {
                 <tr>
                     <td>@identityClaim.Type</td>
-                    <td><a asp-action="Delete" asp-route-id="@identityClaim.Id" asp-route-clientid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                    <td><a asp-action="Delete" asp-route-id="@identityClaim.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
                 </tr>
             }
             <tr>
