--- a/source/one.Identity/Views/ClientSecrets/Edit.cshtml
+++ b/source/one.Identity/Views/ClientSecrets/Edit.cshtml
@@ -30,7 +30,7 @@
                 <td>@clientSecret.Value</td>
                 <td>@clientSecret.Created</td>
                 <td>@clientSecret.Expiration</td>
-                <td><a asp-action="Delete" asp-route-id="@clientSecret.Id" asp-route-clientid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                <td><a asp-action="Delete" asp-route-id="@clientSecret.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
             </tr>
             }
             <tr>
