--- a/source/one.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/one.Identity/Views/IdentityResources/Index.cshtml
@@ -13,7 +13,7 @@
             <th>Name</th>
             <th>Display Name</th>
             <th>Description</th>
-            <th>Actions&nbsp;<a asp-controller="Client" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
+            <th>Actions&nbsp;<a asp-action="Edit"><span class="fa fa-plus"></span></a></th>
         </tr>
         </thead>
 
