--- a/source/one.Identity/Views/Clients/Index.cshtml
+++ b/source/one.Identity/Views/Clients/Index.cshtml
@@ -12,7 +12,7 @@
             <tr>
                 <th>Client Id</th>
                 <th>Client Name</th>
-                <th>Actions&nbsp;<a asp-controller="Client" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
+                <th>Actions&nbsp;<a asp-controller="Clients" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
             </tr>
         </thead>
 
@@ -22,8 +22,8 @@
                 <td>@client.ClientId</td>
                 <td>@client.ClientName</td>
                 <td>
-                    <a asp-controller="Client" asp-action="Edit" asp-route-id="@client.Id"><span class="fa fa-edit"></span></a>
-                    <a asp-controller="Client" asp-action="Delete" asp-route-id="@client.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                    <a asp-controller="Clients" asp-action="Edit" asp-route-id="@client.Id"><span class="fa fa-edit"></span></a>
+                    <a asp-controller="Clients" asp-action="Delete" asp-route-id="@client.Id" title="Delete"><span class="fa fa-trash"></span></a>
                 </td>
             </tr>
         }
