--- a/source/one.Identity/Views/Shared/_Layout.cshtml
+++ b/source/one.Identity/Views/Shared/_Layout.cshtml
@@ -40,8 +40,9 @@
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     @if (User.IsInRole("admin"))
                     {
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Client" asp-action="Index">Clients</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Index">Clients</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="IdentityResources" asp-action="Index">Resources</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Apis" asp-action="Index">APIs</a></li>
                     }
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
