Removed the Quickstart namespace and reorganized those items into functional folders

--- a/source/one.Identity/Views/Account/LoggedOut.cshtml
+++ b/source/one.Identity/Views/Account/LoggedOut.cshtml
@@ -1,4 +1,5 @@
-﻿@model one.Identity.Quickstart.LoggedOutViewModel
+﻿@using one.Identity.Models.AccountViewModels
+@model LoggedOutViewModel
 
 @{ 
     // set this so the layout rendering sees an anonymous user
