--- a/source/one.Identity/Views/Consent/_ScopeListItem.cshtml
+++ b/source/one.Identity/Views/Consent/_ScopeListItem.cshtml
@@ -1,4 +1,5 @@
-﻿@model one.Identity.Models.ScopeViewModel
+﻿@using one.Identity.Models.Consent
+@model one.Identity.Models.Consent.ScopeViewModel
 
 <li class="list-group-item">
     <label>
