--- a/source/one.Identity/Views/Grants/Index.cshtml
+++ b/source/one.Identity/Views/Grants/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model one.Identity.Quickstart.GrantsViewModel
+﻿@model one.Identity.Models.Grants.GrantsViewModel
 
 <div class="grants">
     <div class="row page-header">
