--- a/source/one.Identity/Views/Account/Logout.cshtml
+++ b/source/one.Identity/Views/Account/Logout.cshtml
@@ -1,4 +1,5 @@
-﻿@model one.Identity.Quickstart.LogoutViewModel
+﻿@using one.Identity.Models.AccountViewModels
+@model LogoutViewModel
 
 <div class="logout-page">
     <div class="page-header">
