Updated Sidebar UI and added jumbotron to home page

--- a/source/spydersoft.Identity/Views/Home/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="row">
+<div class="jumbotron">
+    <div class="container">
+        <h1>Welcome to Spydersoft's Identity Server!</h1>
+        <p>This site provides authentication services for Spydersoft applications.</p>
+    </div>
+    
 
 </div>
