--- a/source/spydersoft.Identity/Views/Shared/_AppHeader.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_AppHeader.cshtml
@@ -1,7 +1,11 @@
 ﻿<header class="app-header navbar">
-    <button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">☰</button>
+    <button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler sidebar-minimizer d-md-down-none" type="button">☰</button>
+    <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
     @await Html.PartialAsync("_LoginPartial")
 
