Removed manual tracking of link (use the app.js navigation javascript instead) and fixed titles

--- a/source/spydersoft.Identity/Views/ApiClaims/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiClaims/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model spydersoft.Identity.Models.Admin.ApiViewModels.ApiClaimsViewModel
-@{
-    ViewData["Title"] = "Edit API";
-}
+@model ApiClaimsViewModel
 
 <h2>@ViewData["Title"]</h2>
 
