--- a/source/spydersoft.Identity/Views/Apis/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Apis/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model spydersoft.Identity.Models.Admin.ApiViewModels.ApisViewModel
+@model ApisViewModel
 @{
     ViewData["Title"] = "APIs";
 }
