--- a/source/spydersoft.Identity/Views/ClientIdpRestrictions/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ClientIdpRestrictions/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
-@model spydersoft.Identity.Models.Admin.ClientViewModels.ClientIdpRestrictionsViewModel
-@{
-    ViewData["Title"] = "Edit Client";
-}
+@model ClientIdpRestrictionsViewModel
 
 <h2>@ViewData["Title"]</h2>
 
