--- a/source/spydersoft.Identity/Views/ClientProperties/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ClientProperties/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
-@model spydersoft.Identity.Models.Admin.ClientViewModels.ClientPropertiesViewModel
-@{
-    ViewData["Title"] = "Edit Client";
-}
+@model ClientPropertiesViewModel
+
 
 <h2>@ViewData["Title"]</h2>
 
