--- a/source/spydersoft.Identity/Views/Clients/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Clients/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
-@model spydersoft.Identity.Models.Admin.ClientViewModels.ClientsViewModel
-@{
-    ViewData["Title"] = "Registered Clients";
-}
+@model ClientsViewModel
 
 <h2>@ViewData["Title"]</h2>
 
