--- a/source/spydersoft.Identity/Views/Consent/_ScopeListItem.cshtml
+++ b/source/spydersoft.Identity/Views/Consent/_ScopeListItem.cshtml
@@ -1,5 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Consent
-@model spydersoft.Identity.Models.Consent.ScopeViewModel
+@model ScopeViewModel
 
 <li class="list-group-item">
     <label>
