--- a/source/spydersoft.Identity/Views/IdentityResourceClaims/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResourceClaims/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.IdentityResourceViewModels
-@model spydersoft.Identity.Models.Admin.IdentityResourceViewModels.IdentityResourceClaimsViewModel
-@{
-    ViewData["Title"] = "Edit Identity Resource";
-}
+@model IdentityResourceClaimsViewModel
 
 <h2>@ViewData["Title"]</h2>
 
