--- a/source/spydersoft.Identity/Views/IdentityResourceProperties/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResourceProperties/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.IdentityResourceViewModels
-@model spydersoft.Identity.Models.Admin.IdentityResourceViewModels.IdentityResourcePropertiesViewModel
-@{
-    ViewData["Title"] = "Edit Client";
-}
+@model IdentityResourcePropertiesViewModel
 
 <h2>@ViewData["Title"]</h2>
 
