--- a/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.IdentityResourceViewModels
-@model spydersoft.Identity.Models.Admin.IdentityResourceViewModels.IdentityResourcesViewModel
-@{
-    ViewData["Title"] = "Identity Resources";
-}
+@model IdentityResourcesViewModel
 
 <h2>@ViewData["Title"]</h2>
 
