--- a/source/spydersoft.Identity/Views/Shared/_identityResourceNavBar.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_identityResourceNavBar.cshtml
@@ -1,11 +1,13 @@
 ﻿@using spydersoft.Identity.Models.Admin.IdentityResourceViewModels
-@model spydersoft.Identity.Models.Admin.IdentityResourceViewModels.IdentityResourceNavBarViewModel
+@model IdentityResourceNavBarViewModel
 
-<nav class="nav nav-pills">
-    <a class="nav-link @Model.MainActive" asp-area="" asp-controller="IdentityResources" asp-action="Edit" asp-route-id="@Model.Id">Main</a>
-    @if (Model.Id > 0)
-    {
-        <a class="nav-link @Model.ClaimsActive" asp-area="" asp-controller="IdentityResourceClaims" asp-action="Index" asp-route-id="@Model.Id">Claims</a>
-        <a class="nav-link @Model.PropertiesActive" asp-area="" asp-controller="IdentityResourceProperties" asp-action="Index" asp-route-id="@Model.Id">Properties</a>
-    }
+<nav>
+    <ul class="nav nav-pills">
+        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="IdentityResources" asp-action="Edit" asp-route-id="@Model.Id">Main</a></li>
+        @if (Model.Id > 0)
+        {
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="IdentityResourceClaims" asp-action="Index" asp-route-id="@Model.Id">Claims</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="IdentityResourceProperties" asp-action="Index" asp-route-id="@Model.Id">Properties</a></li>
+        }
+    </ul>
 </nav>
