--- a/source/spydersoft.Identity/Views/ApiProperties/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiProperties/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model spydersoft.Identity.Models.Admin.ApiViewModels.ApiPropertiesViewModel
-@{
-    ViewData["Title"] = "Edit API";
-}
+@model ApiPropertiesViewModel
 
 <h2>@ViewData["Title"]</h2>
 
