--- a/source/spydersoft.Identity/Views/Apis/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/Apis/Edit.cshtml
@@ -1,15 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model spydersoft.Identity.Models.Admin.ApiViewModels.ApiViewModel
-@{
-    if (Model.Id > 0)
-    {
-        ViewData["Title"] = "Edit API";
-    }
-    else
-    {
-        ViewData["Title"] = "New API";
-    }
-}
+@model ApiViewModel
 
 <h2>@ViewData["Title"]</h2>
 
