--- a/source/spydersoft.Identity/Views/ClientGrantTypes/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ClientGrantTypes/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
-@model spydersoft.Identity.Models.Admin.ClientViewModels.ClientGrantTypesViewModel
-@{
-    ViewData["Title"] = "Edit Client";
-}
+@model ClientGrantTypesViewModel
 
 <h2>@ViewData["Title"]</h2>
 
