--- a/source/spydersoft.Identity/Views/Consent/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Consent/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model spydersoft.Identity.Models.ConsentViewModel
+﻿@model ConsentViewModel
 
 <div class="page-consent">
     <div class="row page-header">
