--- a/source/spydersoft.Identity/Views/Shared/_clientNavBar.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_clientNavBar.cshtml
@@ -1,18 +1,20 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
-@model spydersoft.Identity.Models.Admin.ClientViewModels.NavBarViewModel
+@model NavBarViewModel
 
-<nav class="nav nav-pills">
-    <a class="nav-link @Model.MainActive" asp-area="" asp-controller="Clients" asp-action="Edit" asp-route-id="@Model.Id">Main</a>
-    @if (Model.Id > 0)
-    {
-        <a class="nav-link @Model.ScopesActive" asp-area="" asp-controller="ClientScopes" asp-action="Index" asp-route-id="@Model.Id">Allowed Scopes</a>
-        <a class="nav-link @Model.RedirectActive" asp-area="" asp-controller="ClientRedirects" asp-action="Index" asp-route-id="@Model.Id">Redirect URIs</a>
-        <a class="nav-link @Model.ClaimsActive" asp-area="" asp-controller="ClientClaims" asp-action="Index" asp-route-id="@Model.Id">Claims</a>
-        <a class="nav-link @Model.CorsOriginsActive" asp-area="" asp-controller="ClientCorsOrigins" asp-action="Index" asp-route-id="@Model.Id">Cors Origins</a>
-        <a class="nav-link @Model.GrantTypesActive" asp-area="" asp-controller="ClientGrantTypes" asp-action="Index" asp-route-id="@Model.Id">Grant Types</a>
-        <a class="nav-link @Model.IdpRestrictionsActive" asp-area="" asp-controller="ClientIdpRestrictions" asp-action="Index" asp-route-id="@Model.Id">IDP Restrictions</a>
-        <a class="nav-link @Model.PostLogoutActive" asp-area="" asp-controller="ClientPostLogoutRedirectUris" asp-action="Index" asp-route-id="@Model.Id">Post Logout URIs</a>
-        <a class="nav-link @Model.PropertiesActive" asp-area="" asp-controller="ClientProperties" asp-action="Index" asp-route-id="@Model.Id">Properties</a>
-        <a class="nav-link @Model.ClientSecretActive" asp-area="" asp-controller="ClientSecrets" asp-action="Index" asp-route-id="@Model.Id">Secrets</a>
-    }
+<nav>
+    <ul class="nav nav-pills">
+        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Edit" asp-route-id="@Model.Id">Main</a></li>
+        @if (Model.Id > 0)
+        {
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientScopes" asp-action="Index" asp-route-id="@Model.Id">Allowed Scopes</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientRedirects" asp-action="Index" asp-route-id="@Model.Id">Redirect URIs</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientClaims" asp-action="Index" asp-route-id="@Model.Id">Claims</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientCorsOrigins" asp-action="Index" asp-route-id="@Model.Id">Cors Origins</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientGrantTypes" asp-action="Index" asp-route-id="@Model.Id">Grant Types</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientIdpRestrictions" asp-action="Index" asp-route-id="@Model.Id">IDP Restrictions</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientPostLogoutRedirectUris" asp-action="Index" asp-route-id="@Model.Id">Post Logout URIs</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientProperties" asp-action="Index" asp-route-id="@Model.Id">Properties</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ClientSecrets" asp-action="Index" asp-route-id="@Model.Id">Secrets</a></li>
+        }
+    </ul>
 </nav>
