--- a/source/spydersoft.Identity/Views/Home/Contact.cshtml
+++ b/source/spydersoft.Identity/Views/Home/Contact.cshtml
@@ -1,17 +1,20 @@
-﻿@{
-    ViewData["Title"] = "Contact";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+﻿
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card card-accent-info">
+            <div class="card-header">
+                <strong>
+                    <i class="icon-envelope"></i> Contact
+                </strong>
+            </div>
+            <div class="card-body">
+                <h3>Spydersoft</h3>
+                <address>
+                    <strong>General</strong>: <a href="mailto:geregam@gmail.com">geregam@gmail.com</a>
+                </address>
+            </div>
+        </div>
+    </div>
+</div>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
