--- a/source/spydersoft.Identity/Views/Manage/_ManageNav.cshtml
+++ b/source/spydersoft.Identity/Views/Manage/_ManageNav.cshtml
@@ -11,5 +11,6 @@
         <li class="nav-item"><a class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-action="ExternalLogins">External logins</a></li>
     }
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" asp-action="TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.UserClaimsInfoNavClass(ViewContext)" asp-action="UserClaimsInfo">User Claims Info</a></li>
 </ul>
 
