--- a/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,8 @@
     <ul class="nav">
        
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <img gravatar-email="@UserManager.GetUserName(User)" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
-                    <span class="d-md-down-none">@UserManager.GetUserName(User)</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <div class="dropdown-header text-center">
@@ -26,9 +25,8 @@ else
 {
     <ul class="nav navbar-nav ml-auto">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >
+            <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >
                 <img gravatar-email="@UserManager.GetUserName(User)" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
-                <span class="d-md-down-none">@UserManager.GetUserName(User)</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
                 <div class="dropdown-header text-center">
